src/test/deca/test_compilateur/context/invalid/created/return/return_void_float.deca
// Description :
//    return mauvais type : float, demandé void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (2.7) Type de retour effectif : float, déclaré : void

class A{
void met(){
return 0.5;
}
}